# capstone

client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: footer.tsx  navbar.tsx
client/src/pages/: landing.tsx  login.tsx  signup.tsx
client/src/router/: index.tsx
server/: pyproject.toml  requirements.txt
